added hamburger menu

--- a/src/Components/TopicCard.module.scss
+++ b/src/Components/TopicCard.module.scss
@@ -9,7 +9,7 @@
   //border-radius: 30px;
   //margin: 10vh 2vw;
   //background-color: $gray-1;
-  padding: 20px 40px;
+  margin-right: 25px;
   &__icon {
     font-size: 3em;
     color: $gray-1;
