--- a/src/Pages/Home.module.scss
+++ b/src/Pages/Home.module.scss
@@ -167,6 +167,10 @@
       text-justify: newspaper;
       margin-bottom: 10vh;
       line-height: 46px;
+      @include media('<=570px') {
+        text-align: left;
+        width: 80%;
+      }
       h1 {
         font-size: 2.5rem;
         margin: 15px 0;
