--- a/src/Components/TopicCard.module.scss
+++ b/src/Components/TopicCard.module.scss
@@ -4,12 +4,12 @@
   display: inline-block;
 
   height: 10vw;
-  width: 10vw;
+  //width: 10vw;
 
   //border-radius: 30px;
   //margin: 10vh 2vw;
   //background-color: $gray-1;
-  margin-right: 25px;
+  //margin-right: 5vw;
   &__icon {
     font-size: 3em;
     color: $gray-1;
