added hamburger menu

--- a/src/Components/TeamMember.module.scss
+++ b/src/Components/TeamMember.module.scss
@@ -41,7 +41,7 @@
           font-size: 1.6rem;
 
           &:hover {
-            color: #ff9900;
+            color: $hoverColor;
             svg {
               transition: 0.1s top ease-in-out;
               //top: 3px;
