--- a/src/Components/BlogCard.module.scss
+++ b/src/Components/BlogCard.module.scss
@@ -44,8 +44,8 @@
   &__thumbnail {
     overflow: hidden;
     &__img {
-      background: url('https://source.unsplash.com/random/500x300') center
-        center / cover no-repeat;
+      // background: url('https://source.unsplash.com/random/500x300') center
+      //   center / cover no-repeat;
       width: 100%;
       padding-top: 60%;
       transition: 0.3s ease-in-out;
