--- a/src/Components/BlogCard.module.scss
+++ b/src/Components/BlogCard.module.scss
@@ -5,7 +5,7 @@
   flex-flow: column nowrap;
   position: relative;
   margin: 4vh auto;
-  width: 40%;
+  width: 30%;
   height: auto;
   background-color: #fdf9ed;
   border-radius: 10px;
@@ -42,6 +42,8 @@
   }
 
   &__thumbnail {
+    width: 100%;
+    //height: 60%;
     overflow: hidden;
     &__img {
       // background: url('https://source.unsplash.com/random/500x300') center
@@ -54,9 +56,11 @@
   img {
     display: block;
     width: 100%;
-    height: auto;
+    //padding-top: 60%;
+    //height: auto;
     cursor: pointer;
     transition: 0.3s ease-in-out;
+    object-fit: cover;
   }
   &:hover &__thumbnail img {
     transform: scale(1.1);
