--- a/src/Components/BlogCard.module.scss
+++ b/src/Components/BlogCard.module.scss
@@ -7,9 +7,9 @@
   margin: 4vh auto;
   width: 30%;
   height: auto;
-  background-color: #fdf9ed;
+  background-color: #fcf9ef;
   border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   overflow: hidden;
 
   @include media('<=1130px') {
@@ -52,24 +52,25 @@
       padding-top: 60%;
       transition: 0.3s ease-in-out;
     }
+    img {
+      display: inline-block;
+      width: 100%;
+      height: 200px;
+      //padding-top: 60%;
+      //height: auto;
+      cursor: pointer;
+      transition: 0.3s ease-in-out;
+      object-fit: fill;
+    }
   }
-  img {
-    display: block;
-    width: 100%;
-    //padding-top: 60%;
-    //height: auto;
-    cursor: pointer;
-    transition: 0.3s ease-in-out;
-    object-fit: cover;
-  }
+
   &:hover &__thumbnail img {
     transform: scale(1.1);
   }
   &__textContainer {
     @include fontStyle;
-    background-color: #fdf9ed;
     cursor: pointer;
-    padding: 10px;
+    padding: 20px;
 
     &__title {
       letter-spacing: normal;
@@ -80,7 +81,7 @@
     &__author {
       font-size: 18px;
       font-weight: weight(bold);
-      padding-top: 10px;
+      padding-top: 5px;
       color: $gray-1;
     }
     &__description {
@@ -95,7 +96,7 @@
       font-weight: weight(medium);
       font-size: minmax(16px, 1vmax);
 
-      padding: 10px 0;
+      padding: 5px 0;
     }
   }
   &:hover {
