--- a/src/scss/config.scss
+++ b/src/scss/config.scss
@@ -24,7 +24,7 @@ $fontWeights: (
   }
 }
 body {
-  background: white url('../assets/Tiger pattern.svg') center center / contain
+  background: white url('../assets/Tiger pattern.svg') top center / contain
     repeat-y;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
