--- a/src/Components/HamburgerMenu.module.scss
+++ b/src/Components/HamburgerMenu.module.scss
@@ -20,7 +20,7 @@
     //align-items: center;
     //float: left;
 
-    padding-left: 40vw;
+    //padding-left: 40vw;
     height: 100vh;
     width: 100%;
 
@@ -29,17 +29,19 @@
     left: 0;
     z-index: 3;
 
-    background: #fafafa;
+    background: #f1f2f2;
 
     font-size: 5vmax;
   }
   &__link {
+    align-self: center;
     color: #383838;
     font-size: 5vmax;
     padding: 20px 0;
     position: relative;
     &:hover {
       color: #ff416c;
+
       &::before {
         content: '';
         display: block;
@@ -47,7 +49,7 @@
         height: 10px;
         width: 10px;
         top: 50%;
-        left: -10%;
+        left: -25px;
         background-color: #383838;
         border-radius: 50%;
       }
