--- a/src/scss/config.scss
+++ b/src/scss/config.scss
@@ -59,9 +59,22 @@ a:active {
   }
 }
 
-html {
-  //scroll-snap-type: y proximity;
-  scroll-behavior: smooth;
+//test
+// * {
+//   background: #000 !important;
+//   color: #0f0 !important;
+//   outline: solid #f00 1px !important;
+// }
+// html {
+//   //scroll-snap-type: y proximity;
+//   scroll-behavior: smooth;
+//   overflow-x: hidden;
+// }
+
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
 }
 
 @mixin flexCenter {
