--- a/src/Pages/Blog.module.scss
+++ b/src/Pages/Blog.module.scss
@@ -8,7 +8,7 @@
   min-height: 100vh;
 
   &_container {
-    padding: 3rem;
+    //padding: 3rem;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
