--- a/src/Pages/Home.module.scss
+++ b/src/Pages/Home.module.scss
@@ -197,6 +197,7 @@
         flex-flow: column nowrap;
         align-items: baseline;
         margin-top: 18vh;
+        margin-bottom: 6vh;
         @include fontStyle;
         h1 {
           font-size: 2.5rem;
@@ -219,7 +220,7 @@
         @include fontStyle;
         position: static;
         right: 10%;
-        margin: 12vh auto 6vh auto;
+        margin: 12vh auto 12vh auto;
         padding-left: 3vw;
         color: $gray-1;
         font-weight: weight(medium);
@@ -265,6 +266,7 @@
     &__tagLines {
       height: 15vh;
       display: flex;
+      margin-bottom: 5vh;
       * + * {
         div {
           margin-left: 50px;
