--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -1,10 +1,7 @@
 @import 'config.scss';
 .home {
   width: 100%;
-  //height: 92vh;
   .heroSection {
-    // background: white url('../assets/Tiger pattern.svg') center center / cover
-    //   no-repeat;
     min-height: 94vh;
     padding: 0 15vw 0 15vw;
     display: grid;
@@ -164,6 +161,7 @@
       color: $gray-1;
       text-align: justify;
       text-justify: newspaper;
+      //margin-top: 7vh;
       margin-bottom: 10vh;
       line-height: 46px;
       @include media('<=570px') {
