--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,9 +18,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   width: 100%;
-  overflow-x: hidden;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   background: white url('/assets/Tiger pattern.svg') top center / contain
     repeat-y;
@@ -50,4 +51,8 @@ a:active {
   svg {
     transform: translateY(3px);
   }
+}
+.noscroll {
+  height: 100vh;
+  overflow: hidden;
 }
