migrate to nextJS

--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -161,7 +161,7 @@
       color: $gray-1;
       text-align: justify;
       text-justify: newspaper;
-      //margin-top: 7vh;
+      margin-top: 7vh;
       margin-bottom: 10vh;
       line-height: 46px;
       @include media('<=570px') {
