--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,6 +17,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-display: swap;
   width: 100%;
 }
 html {
